# fcitx5-macos

./: .gitignore  .gitmodules  .swift-format.json  CMakeLists.txt  README.md  README.zh-CN.md  check-validity.sh  checksum  fix-cross-build.sh  install-deps.sh  version.jsonl
.github/workflows/: ci.yml  compare.yml
assets/: CMakeLists.txt  README.md  core.entitlements  fcitx.icns  fcitx5-curl  fcitx5-remote  get_im.swift  switch_im.swift  uninstall.sh  update.sh  update_translations.py
assets/config/: CMakeLists.txt  uninstall.sh  update.sh
assets/config/zh-Hans.lproj/: Localizable.strings
assets/en.lproj/: InfoPlist.strings
assets/po/: CMakeLists.txt  zh_CN.po  zh_TW.po
assets/zh-Hans.lproj/: InfoPlist.strings  Localizable.strings
assets/zh-Hant.lproj/: InfoPlist.strings  Localizable.strings
cache/: README.md
cmake/: AddSwift.cmake  AddressSanitizer.cmake  FindLibevent.cmake  InitializeSwift.cmake  MacOSXBundleInfo.plist.in
config/: CMakeLists.txt  Info.plist  about.swift  delegate.swift  downloader.swift  entry.swift  ipc.swift  meta.swift.in  officialplugins.swift  plugin.swift  sudo.swift  window.swift
dmg/: CMakeLists.txt  README.md  background.drawio  background.tiff  config.py  update_translations.py
dmg/en.lproj/: InfoPlist.strings
dmg/zh-Hans.lproj/: InfoPlist.strings
docs/: release.zh-CN.md
include/: fcitx-public.h  fcitx.h  module.modulemap
keycode/: CMakeLists.txt  keycode-public.h  keycode.cpp  keycode.h  module.modulemap
logging/: CMakeLists.txt  debug.swift  debug.swift.in  logging.swift  release.swift
macosfrontend/: CMakeLists.txt  keycode.cpp  keycode.h  macosfrontend-public.h  macosfrontend.conf.in.in  macosfrontend.cpp  macosfrontend.h  macosfrontend.swift  module.modulemap  pasteboard.mm
macosnotifications/: CMakeLists.txt  macosnotifications-public.h  macosnotifications.cpp  macosnotifications.h  module.modulemap  notifications.conf.in.in  notify.swift
patches/: osyncstream.patch  transient.patch  utf8.patch
po/: CMakeLists.txt  LINGUAS  zh_CN.po  zh_TW.po
scripts/: check-code-style.sh  check-validity.sh  code-sign.sh  common.py  format.sh  generate-version.py  install-deps.sh  lint.sh  prepare-release.py  update_translations.py
src/: CMakeLists.txt  color.swift  controller.swift  fcitx-public.h  fcitx.cpp  fcitx.h  fcitx.swift  keycode.cpp  keycode.h  locale.swift  module.modulemap  nativelog.swift  nativestreambuf.h  notification.swift  remote.cpp  secure.swift  server.swift  status.swift  tunnel.cpp  tunnel.h
src/config/: EnumView.swift  FontView.swift  about.swift  addonconfig.swift  advanced.swift  appimoptionview.swift  config-public.h  config.cpp  config.h  config.swift  cssoptionview.swift  customphrase.swift  datamanager.swift  dictmanager.swift  downloader.swift  globalconfig.swift  imageoptionview.swift  importdata.swift  importtable.swift  inputmethod.swift  installer.swift  keycode.swift  keyrecorder.swift  menu.swift  meta.swift.in  navigationsplit.swift  officialplugins.swift  optionmodels.swift  optionviews.swift  plugin.swift  pluginoptionview.swift  quickphrase.swift  tag.swift  themeeditor.swift  thememanager.swift  ui.swift  userthemeoptionview.swift  util.swift  vimmodeoptionview.swift  xmlparser.swift
tests/: CMakeLists.txt  customphrase.plist  testcolor.swift  testconfig.cpp  testconfig.swift  testicon.cpp  testkey.cpp  testkey.swift  teststatus.swift  testtag.swift  testxmlparser.swift
webpanel/: CMakeLists.txt  tunnel.cpp  webpanel.conf.in.in  webpanel.cpp  webpanel.h
